[package]
name = "user-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
phf = { version = "0.10", features = ["macros"] }
serde = "*"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]